--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 * {
     box-sizing: border-box;
+
 }
  body {
      background-color: #191970;
-
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
  }
 
  header {
+    height: 150px;
     background-color: #1E90FF;
     display: flex;
     flex-flow: row;
