--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@
     justify-content: space-between;
  }
 
- header > div.info > ul {
-    list-style: none;
- }
+.wrapper {
+    padding: 20px;
+}
+
+.exp {
+    background-color: #1E90FF;
+    border-radius: 10px;
+    padding: 10px;
+}
